--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,13 @@ capstone/
 .env
 settings.py
 __pycache__/
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
