--- a/requirements.txt
+++ b/requirements.txt
@@ -16,12 +16,14 @@ Jinja2==3.1.2
 Mako==1.2.0
 MarkupSafe==2.1.1
 psycopg2-binary==2.9.3
+pyasn1==0.4.8
 pycodestyle==2.8.0
 pycryptodome==3.3.1
 python-dateutil==2.8.2
 python-dotenv==0.20.0
 python-editor==1.0.4
-python-jose-cryptodome==1.3.2
+python-jose==3.3.0
+rsa==4.8
 six==1.16.0
 SQLAlchemy==1.4.37
 toml==0.10.2
